force-app/main/default/objects/Evony_General__c/fields/MarchingRangedTroopAttack__c.field-meta.xml
<CustomField>
    <fullName>MarchingRangedTroopAttack__c</fullName>
    <label>Marching Ranged Troop Attack</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>