force-app/main/default/objects/Evony_General__c/fields/MarchingTroopDeathWounded__c.field-meta.xml
<CustomField>
    <fullName>MarchingTroopDeathWounded__c</fullName>
    <description>Increase the Marching Troop Death Into Wounded Rate</description>
    <inlineHelpText>Increase the Marching Troop Death Into Wounded Rate</inlineHelpText>
    <label>Marching Troop Death Into Wounded</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>