force-app/main/default/objects/Evony_General__c/fields/RallyCapacity__c.field-meta.xml
<CustomField>
    <fullName>RallyCapacity__c</fullName>
    <description>When a general is launching an Alliance War, increase rally capacity</description>
    <inlineHelpText>When a general is launching an Alliance War, increase rally capacity</inlineHelpText>
    <label>Rally Capacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>