force-app/main/default/objects/Evony_General__c/fields/RangedTroopDefense__c.field-meta.xml
<CustomField>
    <fullName>RangedTroopDefense__c</fullName>
    <label>Ranged Troop Defense</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>